# GenColuna

./: .clangd  README.md  gurobi.ini  meson.build
src/: colunas.cpp  colunas.h  combo.c  combo.h  leitor.cpp  leitor.h  main.cpp  meson.build
